# jukto

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: pty-release.yml
app/: .gitignore  DESIGN.md  README.md  app.config.ts  context.md  eas.json  package.json
app/app/: _layout.tsx  feedback.tsx  help.tsx  index.tsx  jukto-connect.tsx  onboarding.tsx
app/app/(auth)/: auth.tsx
app/app/settings/: storage.tsx
app/app/workspace/: _layout.tsx  index.tsx
app/components/: DrawerContent.tsx  Footer.tsx  Header.tsx  PluginBottomBar.tsx
app/constants/: themes.ts
app/contexts/: AppSettingsContext.tsx  ConnectionContext.tsx  EditorContext.tsx  ReviewPromptContext.tsx  ThemeContext.tsx
app/hooks/: useAI.ts
app/lib/: proxyServer.ts  storage.ts
app/lib/i18n/: index.ts
app/lib/i18n/locales/: de.json  en.json  es-MX.json  es.json  fi.json  fr.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  pl.json  pt.json  ru.json  sv.json  tr.json  tw.json  uk.json  vi.json  zh.json
app/lib/transport/: protocol.ts  v2.ts
app/plugins/: context.tsx  innerApi.ts
app/plugins/core/ai/: Panel.tsx
app/plugins/core/browser/: Panel.tsx
app/plugins/core/editor/: Panel.tsx  (+2 more)
cli/: README.md  package.json
cli/src/: index.ts
cli/src/ai/: codex.ts  index.ts  opencode.ts
cli/src/transport/: protocol.ts  v2.ts
manager/: .dockerignore  Dockerfile  package.json
manager/src/: index.ts
proxy/: .dockerignore  Dockerfile  package.json
proxy/src/: index.ts
pty/: Cargo.toml
pty/src/: session.rs
(+13 files in other folders)
