[package]
name = "jukto-pty"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jukto-pty"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
wezterm-term = { git = "https://github.com/ahm0xc/wezterm" }
wezterm-surface = { git = "https://github.com/ahm0xc/wezterm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
